--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.378.0",
+    "ramda": "^0.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "store": "^2.0.12",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^3.3.17"
@@ -24,8 +26,10 @@
   "devDependencies": {
     "@types/chrome": "^0.0.176",
     "@types/node": "^20.12.12",
+    "@types/ramda": "^0.30.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/store": "^2.0.5",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.34",
