--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Writesonic",
-  "description": "Writesonic Chrome Extension",
+  "name": "Errorease",
+  "description": "Errorease Chrome Extension",
   "version": "1.0.0",
-  "permissions": [
-    "storage",
-    "tabs",
-    "activeTab",
-    "scripting"
-  ],
+  "permissions": ["storage", "tabs", "activeTab", "scripting"],
   "background": {
     "service_worker": "/assets/js/background.js",
     "matches": ["<all_urls>"]
