--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ramda": "^0.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.5",
     "store": "^2.0.12",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
